--- a/chatbot/src/main/resources/application.yml
+++ b/chatbot/src/main/resources/application.yml
@@ -5,4 +5,13 @@ spring:
     ollama:
       chat:
         options:
-          model: llama3.1:8b
+          model: mistral
+          num-ctx: 4096
+      embedding:
+        options:
+          model: nomic-embed-text
+    vectorstore:
+      pgvector:
+        initialize-schema: true
+        dimensions: 768
+        index-type: hnsw
