add chat with open Ai models

--- a/chatbot-openai/build.gradle
+++ b/chatbot-openai/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'org.graalvm.buildtools.native'
 }
 
-group = 'ir.hoomanamini'
+group = 'com.thomasvitale'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -24,20 +24,12 @@ dependencies {
     implementation platform("org.springframework.ai:spring-ai-bom:${springAiVersion}")
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'
-    implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
+    implementation 'org.springframework.ai:spring-ai-mistral-ai-spring-boot-starter'
     implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
-    implementation 'io.micrometer:micrometer-tracing:1.1.0'
 
     testAndDevelopmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:ollama'
-    testImplementation 'org.testcontainers:postgresql'
 }
 
 tasks.named('test') {
