--- a/chatbot/src/main/resources/application.yml
+++ b/chatbot/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
         initialize-schema: true
         dimensions: 768
         index-type: hnsw
+    openai:
+      api-key: ${OPENAI_API_KEY}
+      chat:
+        options:
+          model: gpt-4o
+          temperature: 0.7
