--- a/chatbot-openai/src/main/resources/application.yml
+++ b/chatbot-openai/src/main/resources/application.yml
@@ -1,11 +1,7 @@
+server:
+  port: 8090
 spring:
   ai:
-    mistralai:
-      api-key: ${MISTRALAI_API_KEY}
-      chat:
-        options:
-          model: open-mistral-7b
-          temperature: 0.7
     openai:
       api-key: ${OPENAI_API_KEY}
       chat:
