--- a/chatbot-openai/build.gradle
+++ b/chatbot-openai/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
     implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
 
+//    implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
+
     testAndDevelopmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
