--- a/chatbot-openai/src/main/resources/application.yml
+++ b/chatbot-openai/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8090
+
 spring:
   ai:
     openai:
@@ -8,8 +9,30 @@ spring:
         options:
           model: gpt-4o
           temperature: 0.7
-#    vectorstore:
-#      pgvector:
-#        initialize-schema: true
-#        dimensions: 768
-#        index-type: hnsw
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/hamgoft
+    username: hamgoft
+    password: hamgoft
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  # JWT Secret and Expiration settings
+  security:
+    jwt:
+      secret: your_secret_key
+      expiration: 3600000 # 1 hour in milliseconds
+
+# Uncomment this if you need to use vectorstore settings later
+# vectorstore:
+#   pgvector:
+#     initialize-schema: true
+#     dimensions: 768
+#     index-type: hnsw
