--- a/chatbot-openai/src/main/resources/application.yml
+++ b/chatbot-openai/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
           temperature: 0.7
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/gapgoft
-    username: gapgoft
-    password: gapgoft
+    url: jdbc:postgresql://localhost:5432/xxxx
+    username: xxx
+    password: xxx
     driver-class-name: org.postgresql.Driver
 
   jpa:
