--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     network_mode: host
     container_name: gap-goft
     environment:
-      - OPENAI_API_KEY=*****
+      - OPENAI_API_KEY=******
       - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/xxx
       - SPRING_DATASOURCE_USERNAME=gapgoft
       - SPRING_DATASOURCE_PASSWORD=gapgoft
